2014-04-24  Carl Hetherington  <cth@carlh.net>

	* Version 1.66.14 released.

2014-04-23  Carl Hetherington  <cth@carlh.net>

	* Version 1.66.13 released.

2014-04-21  Carl Hetherington  <cth@carlh.net>

	* Update to es_ES translation from Manuel AC.

	* Update to fr_FR translation from Thierry Journet.

2014-04-17  Carl Hetherington  <cth@carlh.net>

	* Fix update of the gain control when using the gain calculator
	dialog.

	* Version 1.66.12 released.

2014-04-07  Carl Hetherington  <cth@carlh.net>

	* Version 1.66.11 released.

2014-04-07  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet. 

2014-04-02  Carl Hetherington  <cth@carlh.net>

	* Version 1.66.10 released.

2014-04-01  Carl Hetherington  <cth@carlh.net>

	* Basic support for separate left/right-eye files or directories
	for 3D.

2014-03-30  Carl Hetherington  <cth@carlh.net>

	* Version 1.66.9 released.

2014-03-30  Carl Hetherington  <cth@carlh.net>

	* Version 1.66.8 released.

	* nl_NL translation from Theo Kooijmans.

2014-03-27  Carl Hetherington  <cth@carlh.net>

	* Auto-save film metadata before starting DCP encode.

2014-03-25  Carl Hetherington  <cth@carlh.net>

	* Add support for downloading Doremi server certificates.

2014-03-24  Carl Hetherington  <cth@carlh.net>

	* Version 1.66.7 released.

2014-03-24  Carl Hetherington  <cth@carlh.net>

	* Fix error on creating DCPs without audio.

2014-03-23  Carl Hetherington  <cth@carlh.net>

	* Version 1.66.6 released.

2014-03-23  Carl Hetherington  <cth@carlh.net>

	* Attempt to fix format string specifier error on Windows.

	* Version 1.66.5 released.

2014-03-22  Carl Hetherington  <cth@carlh.net>

	* Version 1.66.4 released.

2014-03-22  Carl Hetherington  <cth@carlh.net>

	* Allow specification of the video frame rate that a sound file
	was prepared for.

	* Another attempt to fix colour conversion dialog strange behaviour
	on OS X.

2014-03-18  Carl Hetherington  <cth@carlh.net>
